fixed widths on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -430,16 +430,22 @@
 }
 @media (max-width: 28.125em) {
   .slider {
-    width: 45rem;
+    width: 40rem;
   }
   .slide {
-    width: 45rem;
+    width: 40rem;
   }
   .slide > img {
-    width: 45rem;
+    width: 40rem;
   }
   .image-width {
-    width: 45rem !important;
+    width: 40rem !important;
+  }
+  .slider__btn--left {
+    left: 8%;
+  }
+  .slider__btn--right {
+    right: 8%;
   }
   .img-box-pvc img {
     height: 45rem;
@@ -514,14 +520,14 @@
     height: 35rem;
   }
   .img-vz {
-    max-width: 42.4rem;
+    max-width: 40rem;
     max-height: 36rem;
   }
 
   .grid-container-sv {
-    min-width: 45rem;
-    max-width: 45rem;
-    min-height: 45rem;
+    min-width: 40rem;
+    max-width: 40rem;
+    min-height: 40rem;
   }
   .featured-in-image {
     height: 2.5rem;
